[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/menu/stage_prelude_menu/StagePreludeArcadeContent.gd" type="Script" id=1]
[ext_resource path="res://src/menu/stage_prelude_menu/ParametersInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/8bitOperatorPlus8-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.655
script = ExtResource( 1 )

[node name="BestResultLengthContainerControl" type="Control" parent="."]
visible = false
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.5

[node name="ColorRect" type="ColorRect" parent="BestResultLengthContainerControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 0.686275 )

[node name="BestResultLabel" type="Label" parent="BestResultLengthContainerControl"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Max length reached :"
align = 1
valign = 1

[node name="ParametersInfoControl" parent="BestResultLengthContainerControl" instance=ExtResource( 2 )]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BestResultScoreContainerControl" type="Control" parent="."]
visible = false
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="BestResultScoreContainerControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 0.686275 )

[node name="BestResultLabel" type="Label" parent="BestResultScoreContainerControl"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Highest score reached :"
align = 1
valign = 1

[node name="ParametersInfoControl" parent="BestResultScoreContainerControl" instance=ExtResource( 2 )]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BestResultSingleContainerControl" type="Control" parent="."]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7

[node name="ColorRect" type="ColorRect" parent="BestResultSingleContainerControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.156863, 0.686275 )

[node name="BestResultLabel" type="Label" parent="BestResultSingleContainerControl"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Best result :"
align = 1
valign = 1

[node name="ParametersInfoControl" parent="BestResultSingleContainerControl" instance=ExtResource( 2 )]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NoResultYetLabel" type="Label" parent="BestResultSingleContainerControl"]
visible = false
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.886275, 0.0941176, 0.976471, 1 )
custom_fonts/font = SubResource( 2 )
text = "No results yet"
align = 1
valign = 1
